--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@ body * {
 body {
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 /* HEADER */
@@ -82,6 +83,7 @@ body {
 .stream-tiles {
     display: grid;
     padding-left: 5px;
+    row-gap: 6px;
 }
 
 .stream-tiles>li {
@@ -89,7 +91,6 @@ body {
     grid-template-columns: 50px 86px auto 50px;
     font-family: 'Montserrat', sans-serif;
     list-style: none;
-    margin-bottom: 6px;
     padding: 5px 9px 5px 5px;
     background-color: #4d4d4d;
     color: white;
